# meltano-tap-linear

./: .gitignore  README.md  pyproject.toml
tap-notion/: ARCHITECTURE.md  LICENSE  README.md  meltano.yml  pyproject.toml
tap-notion/.github/workflows/: build.yml  test.yml
tap-notion/tap_notion/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap-notion/tests/: __init__.py  test_core.py
