[tool.poetry]
name = "meltano-tap-linear"
version = "0.1.0"
description = ""
authors = ["René Steeman <rene@in-parallel.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.4.2"
singer-sdk = "^0.52.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
